Update default to ROCm 7.1 * Remove Ubuntu 20.04 variant. * Add debian trixie variant.

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 OS_VARIANT=ubuntu-24.04
-ROCM_VERSION=6.2
-AMDGPU_VERSION=6.2
+ROCM_VERSION=7.1.1
+GFX_VERSION=
+GFX_ARCH=
 TERM_FLAVOR=-complete-sdk
 XTERM_FLAVOR=-complete
 UID=
 RENDER_GID=109
+
