--- a/dev/Dockerfile-ubuntu-ml-sdk
+++ b/dev/Dockerfile-ubuntu-ml-sdk
@@ -1,13 +1,16 @@
 # This dockerfile is meant to serve as a rocm base image.
 # Add rocm-lib package to rocm/dev-ubuntu-20.04 image
 
-ARG OS_VARIANT=ubuntu-20.04
-ARG ROCM_VERSION=6.1
+ARG OS_VARIANT
+ARG ROCM_VERSION=7.1
 
-FROM rocm/dev-${OS_VARIANT}:$ROCM_VERSION
+FROM rocm/dev-${OS_VARIANT}:${ROCM_VERSION}-ml
 
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-  rocm-openmp-sdk \
+  rocm-ml-sdk \
+  python3-dev \
+  build-essential \
+  && apt-mark auto rocm-ml-libraries \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
