--- a/dev/Dockerfile-ubuntu-complete-sdk
+++ b/dev/Dockerfile-ubuntu-complete-sdk
@@ -1,14 +1,17 @@
 # This dockerfile is meant to serve as a rocm base image.
 # Add rocm-lib package to rocm/dev-ubuntu-20.04 image
 
-ARG OS_VARIANT=ubuntu-20.04
-ARG ROCM_VERSION=6.1
+ARG OS_VARIANT
+ARG ROCM_VERSION=7.1
 
-FROM rocm/dev-${OS_VARIANT}:$ROCM_VERSION
+FROM rocm/dev-${OS_VARIANT}:${ROCM_VERSION}-ml-sdk
 
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-  rocm-hip-libraries \
-  && apt-mark auto rocminfo rocm-language-runtime \
+  rocm-opencl-sdk \
+  clinfo \
+  rocm-openmp-sdk \
+  migraphx-dev \
+  mivisionx-dev \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
