--- a/dev/Dockerfile-ubuntu-hip-sdk
+++ b/dev/Dockerfile-ubuntu-hip-sdk
@@ -1,14 +1,16 @@
 # This dockerfile is meant to serve as a rocm base image.
 # Add rocm-lib package to rocm/dev-ubuntu-20.04 image
 
-ARG OS_VARIANT=ubuntu-20.04
-ARG ROCM_VERSION=6.1
+ARG OS_VARIANT
+ARG ROCM_VERSION=7.1
 
 FROM rocm/dev-${OS_VARIANT}:${ROCM_VERSION}-hip
 
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-  rocm-ml-libraries \
-  && apt-mark auto rocm-hip-libraries \
+  rocm-hip-sdk rocm-hip-runtime-dev \
+  python3-dev \
+  build-essential \
+  && apt-mark auto rocm-hip-libraries rocm-hip-runtime \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
