--- a/rocm-terminal/Dockerfile-debian-trixie
+++ b/rocm-terminal/Dockerfile-debian-trixie
@@ -10,14 +10,15 @@
 # If it is desired to run the container manually through the docker command-line, the following is an example
 # 'docker run -it --rm -v [host/directory]:[container/directory]:ro <user-name>/<project-name>'.
 
-ARG ROCM_VERSION=6.1
+ARG ROCM_VERSION=7.1
 ARG TERM_FLAVOR
-ARG USER_NAME=rocm-user
 
-FROM rocm/dev-ubuntu-20.04:${ROCM_VERSION}${TERM_FLAVOR}
+FROM rocm/dev-debian-trixie:${ROCM_VERSION}${TERM_FLAVOR}
 
 ARG UID
 ARG RENDER_GID
+ARG USER_NAME=rocm-user
+ENV LANG=C.UTF-8
 
 # Initialize the image
 # Modify to pre-install dev tools and ROCm packages
@@ -25,13 +26,21 @@ RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
   git \
   vim-nox \
+  locales \
   less \
   cmake-curses-gui \
   python3-pip \
   python3-venv \
-  rocm-developer-tools
+  python3-yaml \
+  python3-argcomplete \
+  libgulkan-dev \
+  libplacebo-dev \
+  rocm-developer-tools \
+  mediainfo \
+  ffmpeg
 RUN apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+RUN ldconfig
 
 # Grant members of 'sudo' group passwordless privileges
 # Comment out to require sudo
