--- a/rocm-terminal/Dockerfile-debian-trixie-x11
+++ b/rocm-terminal/Dockerfile-debian-trixie-x11
@@ -10,14 +10,15 @@
 # If it is desired to run the container manually through the docker command-line, the following is an example
 # 'docker run -it --rm -v [host/directory]:[container/directory]:ro <user-name>/<project-name>'.
 
-ARG ROCM_VERSION=6.1
+ARG ROCM_VERSION=7.1
 ARG TERM_FLAVOR
-ARG USER_NAME=rocm-user
 
-FROM rocm/dev-ubuntu-20.04:${ROCM_VERSION}${TERM_FLAVOR}
+FROM rocm/dev-debian-trixie:${ROCM_VERSION}${TERM_FLAVOR}
 
 ARG UID
 ARG RENDER_GID
+ARG USER_NAME=rocm-user
+ENV LANG=C.UTF-8
 
 # Initialize the image
 # Modify to pre-install dev tools and ROCm packages
@@ -28,39 +29,39 @@ RUN apt-get update \
   less \
   python3-venv
 
-# This is meant to be used as an interactive developer container
-# Create user $USER_NAME as member of sudo group
-RUN UID_ADD=; [ -z "$UID" ] || UID_ADD="-u $UID"; \
-    if [ -z "$RENDER_GID" ]; then \
-      useradd --create-home $UID_ADD -G sudo,video --shell /bin/bash rocm-user; \
-    else \
-      groupadd -g $RENDER_GID render; \
-      useradd --create-home $UID_ADD -G sudo,video,render --shell /bin/bash rocm-user; \
-    fi
-
 # Modify to pre-install X11 related tools and user space drivers
 # These packages are installed after render group has been added
 # because a depending package would add render group with specific GID
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
   mesa-vulkan-drivers \
   vulkan-tools \
-  libgulkan-0.13-0 \
-  libgl1-amdgpu-mesa-dri \
-  libva-amdgpu-drm2 \
-  libva-amdgpu-x11-2 \
+  libgulkan-utils \
   vainfo \
-  xserver-xorg-amdgpu-video-amdgpu \
+  xserver-xorg-video-amdgpu \
   x11-apps \
   dbus-x11 \
   mesa-utils \
   pulseaudio \
-  fuse
+  fuse \
+  ffmpeg
 RUN apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+RUN ldconfig
 
 # Grant members of 'sudo' group passwordless privileges
 # Comment out to require sudo
 COPY sudo-nopasswd /etc/sudoers.d/sudo-nopasswd
+
+# This is meant to be used as an interactive developer container
+# Create user $USER_NAME as member of sudo group
+# Append /opt/rocm/bin to the system PATH variable
+RUN UID_ADD=; [ -z "$UID" ] || UID_ADD="-u $UID"; \
+    if [ -z "$RENDER_GID" ]; then \
+      useradd --create-home $UID_ADD -G sudo,video --shell /bin/bash $USER_NAME; \
+    else \
+      groupadd -g $RENDER_GID render; \
+      useradd --create-home $UID_ADD -G sudo,video,render --shell /bin/bash $USER_NAME; \
+    fi
 
 # Make startup script to launch dbus for user session
 COPY start-dbus.sh /usr/local/bin
